apps/networking/traefik/ingress-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: ingress
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.vulf.haus`)
    middlewares:
    - name: authentik
      namespace: authentik
    priority: 10
    services:
    - kind: TraefikService
      name: api@internal
  - kind: Rule
    match: Host(`traefik.vulf.haus`) && PathPrefix(`/outpost.goauthentik.io/`)
    priority: 15
    services:
    - name: authentik-server
      namespace: authentik
      port: 80
  tls:
    secretName: cm-shared-wildcard-vulfhaus-tls
