apps/networking/traefik/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.vulf.haus`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: authentik
      priority: 10
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: "Host(`traefik.vulf.haus`) && PathPrefix(`/outpost.goauthentik.io/`)"
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
      priority: 15
  tls:
    # shared wildcard cert for *.vulf.haus
    secretName: cm-shared-wildcard-vulfhaus-tls
